# spla

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  spmat.cpp  spmat.h  spmatmat.cpp  spmatvec.cpp  types.h
test/: CMakeLists.txt  spla_test.cpp
